<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MiniECG</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="close_app">close_app</string>
    <string name="about">about</string>
    <string name="title_activity_about_page">About</string>
    <string name="title_activity_device_list">DeviceList</string>
    <string name="title_activity_graph">graph</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_menu">menu</string>
    <string name="about_text">About</string>
    <string name="about_data">sample1</string>
    <string name="dev_1">Subin E K</string>
    <string name="dev_2">Shruti</string>
    <string name="dev_3">K Naveena</string>
    <string name="ecg">Electrocardigram</string>
    <string name="miniEcg">MiniECG</string>
    <string name="devices">Paired Devices</string>
    <string name="start">Start</string>
    <string name="stop">stop</string>
    <string name="topic_2">What is miniECG ?</string>
    <string name="topic_3">Myocardial Infarction</string>
    <string name="topic_4">What does an ECG show ?</string>
    <string name="desc">It is a dedicated app for miniECG devices - an effort to make ECG affordable and to have it at ease.\nWeekly check with miniECG and know when you need to see the doctor\n\n            Mini ECG is a single lead ECG device for extracting ECG signals. The RA and LA leads should be connected to your right and left chest and RL to the left leg. It will start the ECG extraction on pressing the push button. MiniECG app can stream and plot your ECG.\n\n\n Be healthy!! :) </string>
    <string name="text_1">The heart is a muscular pump made up of four chambers. The two upper chambers are called atria. The two lower chambers are called ventricles.</string>
    <string name="text_2">A natural electrical system causes the heart muscle to contract. This pumps blood through the heart to the lungs and the rest of the body.\n \n An electrocardiogram (EKG or ECG) is a test that checks for problems with this electrical activity of your heart. An EKG shows the heart\'s electrical activity as line tracings on paper. The spikes and dips in the tracings are called waves.</string>
    <string name="text_3">Symptoms of Myocardial Infarction(heart attack) is different for different people. It is not always the sudden chest pain as is shown in movies/serials. \nThis makes it very important to know some of the common symptoms \n\n ~ People who have high blood sugar (diabetes) may have no symptoms or very mild ones.\n\n ~ The most common symptom, in both men and women, is chest pain or discomfort.\n\n ~ Women are somewhat more likely to have shortness of breath, nausea and vomiting, unusual tiredness (sometimes for days), and pain in the back, shoulders, and jaw.</string>
    <string name="text_4">Besides detecting a heart attack, an acg is helpful in \n\n ~ an enlarged heart characterised by bigger impulses than normal and \n\n ~ Abnormal Heart rythms - Arrhythmias. It may not cause any signs or symptoms. In fact, your doctor might find you have an arrhythmia before you do.\n\n\nTherefore it is advisable to do routine checkup with your miniECG</string>
    <string name="ignore">ignore</string>


</resources>
