<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">




            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/title"
                android:text="@string/ecg"
                android:background="@color/lpink"
                android:textAlignment="center"
                android:gravity="center_vertical|center_horizontal"
                android:textColor="@color/white"
                android:id="@+id/textView2"
                android:textSize="@dimen/tSize"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="237dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv1"
                android:text="@string/text_1"
                android:layout_alignBottom="@+id/imageView2"
                android:layout_alignParentStart="true"
                android:paddingStart="@dimen/padding"
                android:paddingEnd="@dimen/padding"
                />

            <ImageView
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:background="@drawable/heart2"
                android:layout_gravity="end"
                android:id="@+id/imageView2"
                android:layout_below="@+id/textView2"
                android:layout_toEndOf="@+id/tv1"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/ignore"/>



    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_2"
        android:id="@+id/textView3"
        android:paddingLeft="@dimen/padding"
        android:paddingRight="@dimen/padding"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/title"
        android:text="@string/topic_2"
        android:textSize="@dimen/tSize"
        android:textStyle="bold"
        android:background="@color/lblue"
        android:textAlignment="center"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@color/white"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="@dimen/top" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mini"
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/padding"
            android:text="@string/desc"
            android:layout_marginTop="@dimen/top"
            android:layout_below="@+id/textView4"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/title"
            android:layout_marginTop="@dimen/top"
            android:id="@+id/heart"
            android:text="@string/topic_3"
            android:textSize="@dimen/tSize"
            android:background="@color/lyell"
            android:textAlignment="center"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/white"
            android:layout_below="@+id/mini"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/attack"
            android:layout_below="@+id/heart"
            android:layout_marginTop="@dimen/top"
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/padding"
            android:text="@string/text_3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/title"
            android:layout_below="@+id/attack"
            android:id="@+id/show"
            android:layout_marginTop="@dimen/top"
            android:text="@string/topic_4"
            android:textSize="@dimen/tSize"
            android:textColor="@color/white"
            android:gravity="center_vertical|center_horizontal"
            android:background="@color/lpink"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/padding"
            android:id="@+id/does"
            android:layout_below="@+id/show"
            android:layout_marginTop="@dimen/top"
            android:text="@string/text_4"/>
    </RelativeLayout>
</ScrollView>




</RelativeLayout>